--- a/02-CrayPortfolio/assets/style.css
+++ b/02-CrayPortfolio/assets/style.css
@@ -4,7 +4,7 @@
 }
 .banner{
   margin-top: 20px;
-  background-image: url("../assets/images/valleyshot.jpg");
+  background-image: url("./images/valleyshot.jpg");
   background-size: cover;
   background-position: center;
   background-blend-mode: soft-light;
